--- a/index.html
+++ b/index.html
@@ -3,44 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
-    <link rel="stylesheet" href="./styles.css"/>
+    <title>Javascript Calculator</title>
+    <link type="text/css" rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <div class="screen">0</div>
-        <div class="keypad">
-            <div class="row">
-                <div class="modifier" id="clear">A/C</div>
-                <div class="modifier" id="negate">+/-</div>
-                <div class="modifier" id="percent">%</div>
-                <div class="operator" id="divide">÷</div>
-            </div>
-            <div class="row">
-                <div class="number" id="seven">7</div>
-                <div class="number" id="eight">8</div>
-                <div class="number" id="nine">9</div>
-                <div class="operator" id="multiply">×</div>
-            </div>
-            <div class="row">
-                <div class="number" id="four">4</div>
-                <div class="number" id="five">5</div>
-                <div class="number" id="six">6</div>
-                <div class="operator" id="subtract">-</div>
-            </div>
-            <div class="row">
-                <div class="number" id="one">1</div>
-                <div class="number" id="two">2</div>
-                <div class="number" id="three">3</div>
-                <div class="operator" id="add">+</div>
-            </div>
-            <div class="row">
-                <div class="number" id="zero">0</div>
-                <div class="button" id="decimal">.</div>
-                <div class="button" id="equals">=</div>
-            </div>
+    <div class="screen">0</div>
+    <div class="keypad">
+        <div class="row">
+            <div class="button modifier" id="clear">A/C</div>
+            <div class="button modifier" id="negate">+/-</div>
+            <div class="button modifier" id="percent">%</div>
+            <div class="button operator" id="divide">÷</div>
+        </div>
+        <div class="row">
+            <div class="button number" id="seven">7</div>
+            <div class="button number" id="eight">8</div>
+            <div class="button number" id="nine">9</div>
+            <div class="button operator" id="multiply">×</div>
+        </div>
+        <div class="row">
+            <div class="button number" id="four">4</div>
+            <div class="button number" id="five">5</div>
+            <div class="button number" id="six">6</div>
+            <div class="button operator" id="subtract">-</div>
+        </div>
+        <div class="row">
+            <div class="button number" id="one">1</div>
+            <div class="button number" id="two">2</div>
+            <div class="button number" id="three">3</div>
+            <div class="button operator" id="add">+</div>
+        </div>
+        <div class="row">
+            <div class="button number" id="zero">0</div>
+            <div class="button" id="decimal">.</div>
+            <div class="button" id="equals">=</div>
         </div>
     </div>
-    <script src="./script.js"></script>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
